siamese late pooling

--- a/notebooks/play_unet_siamese_late_pooling.ipynb
+++ b/notebooks/play_unet_siamese_late_pooling.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +121,7 @@
     "        self.init_layer2 = nn.Conv2d(6, init_filters, (7, 7), padding=3)\n",
     "        self.data_norm3 = nn.BatchNorm2d(3)\n",
     "        self.init_layer3 = nn.Conv2d(3, init_filters, (7, 7), padding=2)\n",
-    "        self.activation1 = nn.ReLU()\n",
-    "        self.activation2 = nn.ReLU()\n",
-    "        self.activation3 = nn.ReLU()\n",
+    "        self.activation = nn.ReLU()\n",
     "        self.init_norm1 = nn.BatchNorm2d(init_filters)\n",
     "        self.init_norm2 = nn.BatchNorm2d(init_filters)\n",
     "        self.init_norm3 = nn.BatchNorm2d(init_filters)\n",
@@ -195,15 +193,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 32, 32, 32]) torch.Size([8, 32, 16, 16]) torch.Size([8, 32, 4, 4])\n",
+      "torch.Size([8, 1, 32, 32])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/torch/nn/functional.py:1890: UserWarning: nn.functional.upsample is deprecated. Use nn.functional.interpolate instead.\n",
+      "  warnings.warn(\"nn.functional.upsample is deprecated. Use nn.functional.interpolate instead.\")\n",
+      "/usr/local/lib/python3.5/dist-packages/torch/nn/functional.py:1961: UserWarning: Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "  \"See the documentation of nn.Upsample for details.\".format(mode))\n"
+     ]
+    }
+   ],
    "source": [
     "# model = torch.load('../weights/onera/3dconv_seg.pt')\n",
     "DEVICE = 3\n",
     "model = UNetClassify(layers=4, init_filters=32)\n",
+    "inp1 = torch.randn(8,4,32,32)\n",
+    "inp2 = torch.randn(8,6,16,16)\n",
+    "inp3 = torch.randn(8,3,6,6)\n",
+    "\n",
+    "out = model(inp1, inp2, inp3, inp1, inp2, inp3)\n",
+    "print (out[0].size())\n",
     "# torch.save(model.state_dict(), 'test.pt')\n",
-    "weights = torch.load('../../weights/onera/unet_siamese_late_pooling_prod_relu_inp32_13band_2dates_focal_hm_cnc_all_14_cities.pt', map_location=lambda storage, loc: storage.cuda(DEVICE))\n",
+    "# weights = torch.load('../../weights/onera/unet_siamese_late_pooling_prod_relu_inp32_13band_2dates_focal_hm_cnc_all_14_cities.pt', map_location=lambda storage, loc: storage.cuda(DEVICE))\n",
     "# model.load_state_dict(weights)\n",
     "# model.eval()\n",
     "# dic = model.state_dict()\n",
