--- a/notebooks/play_yiwu.ipynb
+++ b/notebooks/play_yiwu.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,10 +178,13 @@
     "    pool.close()\n",
     "    return bands\n",
     "\n",
-    "# def match_bands(date1, date2):\n",
-    "#     pool = Pool(13)\n",
-    "#     date2 = pool.starmap(mb, (date1, date2))\n",
-    "#     return date2\n",
+    "def _match_band(two_date):\n",
+    "    return match_band(two_date[1], two_date[0])\n",
+    "\n",
+    "def match_bands(date1, date2):\n",
+    "    pool = Pool(13)\n",
+    "    date2 = pool.map(_match_band, [[date1[i], date2[i]] for i in range(len(date1))])\n",
+    "    return date2\n",
     "        \n",
     "def _resize(band):\n",
     "    return cv2.resize(band, (10980, 10980))\n",
@@ -204,22 +207,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1b = read_bands(d1_bands)\n",
-    "d2b = read_bands(d2_bands)\n",
+    "# d1b = read_bands(d1_bands)\n",
+    "# d2b = read_bands(d2_bands)\n",
     "\n",
     "# d2b = match_bands(d1b, d2b)\n",
     "\n",
-    "d1b = stack_bands(d1b)\n",
-    "d2b = stack_bands(d2b)"
+    "# d1b = stack_bands(d1b)\n",
+    "# d2b = stack_bands(d2b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
