--- a/notebooks/play_yiwu.ipynb
+++ b/notebooks/play_yiwu.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
     "    return rasterio.open(band).read()[0]\n",
     "\n",
     "def read_bands(band_paths):\n",
-    "    pool = Pool(13)\n",
+    "    pool = Pool(26)\n",
     "    bands = pool.map(read_band, band_paths)\n",
     "    pool.close()\n",
     "    return bands\n",
@@ -184,54 +184,55 @@
     "def match_bands(date1, date2):\n",
     "    pool = Pool(13)\n",
     "    date2 = pool.map(_match_band, [[date1[i], date2[i]] for i in range(len(date1))])\n",
+    "    pool.close()\n",
     "    return date2\n",
     "        \n",
     "def _resize(band):\n",
     "    return cv2.resize(band, (10980, 10980))\n",
     "    \n",
-    "def stack_bands(bands):\n",
-    "    maxh, maxw = 0, 0\n",
-    "    for band in bands:\n",
-    "        maxh = max(band.shape[0], maxh)\n",
-    "        maxw = max(band.shape[1], maxw)\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    pool = Pool(13)\n",
+    "def stack_bands(bands):    \n",
+    "    pool = Pool(26)\n",
     "    bands = pool.map(_resize, bands)\n",
+    "    pool.close()\n",
+    "    pool = Pool(26)\n",
     "    bands = pool.map(stretch_8bit, bands)\n",
     "    pool.close()\n",
     "    \n",
-    "    return np.stack(bands).astype(np.float32)"
+    "    return np.stack(bands[:13]).astype(np.float32), np.stack(bands[13:]).astype(np.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# d1b = read_bands(d1_bands)\n",
-    "# d2b = read_bands(d2_bands)\n",
+    "d1d2 = read_bands(d1_bands + d2_bands)\n",
     "\n",
-    "# d2b = match_bands(d1b, d2b)\n",
+    "d1d2[13:] = match_bands(d1d2[:13], d1d2[13:])\n",
     "\n",
-    "# d1b = stack_bands(d1b)\n",
-    "# d2b = stack_bands(d2b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = np.zeros((d1b.shape[1], d1b.shape[2]))"
+    "d1, d2 = stack_bands(d1d2)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = np.zeros((d1.shape[1], d1.shape[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -250,30 +251,30 @@
     "batches1 = []\n",
     "batches2 = []\n",
     "ijs = []\n",
-    "for i in range(0,d1b.shape[1],64):\n",
-    "    for j in range(0,d1b.shape[2],64):\n",
-    "        if i+input_size <= d1b.shape[1] and j+input_size <= d1b.shape[2]:\n",
-    "            batches1.append(d1b[:,i:i+input_size,j:j+input_size])\n",
-    "            batches2.append(d2b[:,i:i+input_size,j:j+input_size])\n",
+    "for i in range(0,d1.shape[1],64):\n",
+    "    for j in range(0,d1.shape[2],64):\n",
+    "        if i+input_size <= d1.shape[1] and j+input_size <= d1.shape[2]:\n",
+    "            batches1.append(d1[:,i:i+input_size,j:j+input_size])\n",
+    "            batches2.append(d2[:,i:i+input_size,j:j+input_size])\n",
     "            ijs.append([i,j])\n",
-    "        elif i+input_size>d1b.shape[1] and j+input_size<=d1b.shape[2]:\n",
-    "            batches1.append(d1b[:,d1b.shape[1]-input_size:d1b.shape[1],j:j+input_size])\n",
-    "            batches2.append(d2b[:,d2b.shape[1]-input_size:d2b.shape[1],j:j+input_size])\n",
-    "            ijs.append([d1b.shape[1]-input_size,j])\n",
-    "        elif i+input_size<=d1b.shape[1] and j+input_size>d1b.shape[2]:\n",
-    "            batches1.append(d1b[:,i:i+input_size,d1b.shape[2]-input_size:d1b.shape[2]])\n",
-    "            batches2.append(d2b[:,i:i+input_size,d2b.shape[2]-input_size:d2b.shape[2]])\n",
-    "            ijs.append([i,d1b.shape[2]-input_size])\n",
+    "        elif i+input_size>d1.shape[1] and j+input_size<=d1.shape[2]:\n",
+    "            batches1.append(d1[:,d1.shape[1]-input_size:d1.shape[1],j:j+input_size])\n",
+    "            batches2.append(d2[:,d2.shape[1]-input_size:d2.shape[1],j:j+input_size])\n",
+    "            ijs.append([d1.shape[1]-input_size,j])\n",
+    "        elif i+input_size<=d1.shape[1] and j+input_size>d1.shape[2]:\n",
+    "            batches1.append(d1[:,i:i+input_size,d1.shape[2]-input_size:d1.shape[2]])\n",
+    "            batches2.append(d2[:,i:i+input_size,d2.shape[2]-input_size:d2.shape[2]])\n",
+    "            ijs.append([i,d1.shape[2]-input_size])\n",
     "        else:\n",
-    "            batches1.append(d1b[:,d1b.shape[1]-input_size:d1b.shape[1],\n",
-    "                                 d1b.shape[2]-input_size:d1b.shape[2]])\n",
-    "            batches2.append(d2b[:,d2b.shape[1]-input_size:d2b.shape[1],\n",
-    "                                 d2b.shape[2]-input_size:d2b.shape[2]])\n",
-    "            ijs.append([d1b.shape[1]-input_size,d1b.shape[2]-input_size])\n",
+    "            batches1.append(d1[:,d1.shape[1]-input_size:d1.shape[1],\n",
+    "                                 d1.shape[2]-input_size:d1.shape[2]])\n",
+    "            batches2.append(d2[:,d2.shape[1]-input_size:d2.shape[1],\n",
+    "                                 d2.shape[2]-input_size:d2.shape[2]])\n",
+    "            ijs.append([d1.shape[1]-input_size,d1.shape[2]-input_size])\n",
     "\n",
-    "        if len(batches1) == 70:\n",
-    "            inp1 = w(torch.from_numpy(np.asarray(batches1)))\n",
-    "            inp2 = w(torch.from_numpy(np.asarray(batches2)))\n",
+    "        if len(batches1) == 120:\n",
+    "            inp1 = w(torch.from_numpy(np.asarray(batches1) / 255.))\n",
+    "            inp2 = w(torch.from_numpy(np.asarray(batches2) / 255.))\n",
     "#                 print (inp1.size(),inp2.size())\n",
     "            logits = model(inp1, inp2)\n",
     "            pred = F.sigmoid(logits) > 0.5\n",
@@ -293,12 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "profile = rasterio.open(d1_bands[1]).meta\n",
+    "profile = rasterio.open(d1_bands[1]).profile\n",
     "profile['dtype'] = 'uint8'\n",
+    "profile['driver'] = 'GTiff'\n",
     "fout = rasterio.open('../../../Yiwu/cd_out/T50RQS_20151126T024032_20170228T023631.tif', 'w', **profile)\n",
     "fout.write(np.asarray([out]).astype(np.uint8))\n",
     "fout.close()"
@@ -306,17 +308,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'width': 10980, 'transform': Affine(10.0, 0.0, 699960.0,\n",
+       "       0.0, -10.0, 3200040.0), 'blockxsize': 1024, 'count': 1, 'height': 10980, 'driver': 'GTiff', 'crs': CRS({'init': 'epsg:32650'}), 'tiled': True, 'dtype': 'uint8', 'blockysize': 1024, 'nodata': None}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profile"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fin = rasterio.open('../../../Yiwu/cd_out/T50RQS_20151126T024032_20170228T023631.tif')\n",
+    "print "
+   ]
   },
   {
    "cell_type": "code",
