--- a/notebooks/play_yiwu.ipynb
+++ b/notebooks/play_yiwu.ipynb
@@ -82,10 +82,7 @@
     "samples = {}\n",
     "for line in dates.split('\\n'):\n",
     "    row = line.split()\n",
-    "    samples[row[0]] = row[1:]\n",
-    "    import rasterio\n",
-    "import cv2\n",
-    "import "
+    "    samples[row[0]] = row[1:]"
    ]
   },
   {
