added batch based logging

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -103,6 +103,156 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd_test_metrics={\n",
+    "    'cd_test_losses': [1,2,3],\n",
+    "    'cd_test_corrects': [0],\n",
+    "    'cd_test_precisions': [0],\n",
+    "    'cd_test_recalls': [0],\n",
+    "    'cd_test_f1scores': [0],\n",
+    "    'lulc_test_losses': [0],\n",
+    "    'lulc_test_corrects': [0],\n",
+    "    'lulc_test_precisions': [0],\n",
+    "    'lulc_test_recalls': [0],\n",
+    "    'lulc_test_f1scores': [0]\n",
+    "}\n",
+    "\n",
+    "one_metrics={\n",
+    "    'cd_test_losses': [1,2,3],\n",
+    "    'cd_test_corrects': [0],\n",
+    "    'cd_test_precisions': [0],\n",
+    "    'cd_test_recalls': [0],\n",
+    "    'cd_test_f1scores': [0],\n",
+    "    'lulc_test_losses': [0],\n",
+    "    'lulc_test_corrects': [0],\n",
+    "    'lulc_test_precisions': [0],\n",
+    "    'lulc_test_recalls': [0],\n",
+    "    'lulc_test_f1scores': [0]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cd_test_losses': 2.0,\n",
+       " 'cd_test_corrects': 0.0,\n",
+       " 'cd_test_precisions': 0.0,\n",
+       " 'cd_test_recalls': 0.0,\n",
+       " 'cd_test_f1scores': 0.0,\n",
+       " 'lulc_test_losses': 0.0,\n",
+       " 'lulc_test_corrects': 0.0,\n",
+       " 'lulc_test_precisions': 0.0,\n",
+       " 'lulc_test_recalls': 0.0,\n",
+       " 'lulc_test_f1scores': 0.0}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{k:np.mean(v) for k,v in cd_test_metrics.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best = {'a':-1}\n",
+    "d1 = {'a':0, 'b':1}\n",
+    "d2 = {'c':2, 'd':3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = {'epoch':1, **d1, **d2, **best}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'epoch': 1, 'a': -1, 'b': 1, 'c': 2, 'd': 3}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del d1, d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'd2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-fe1ba9d06821>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'd2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "d2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
